--- a/app/.env
+++ b/app/.env
@@ -1,1 +1,17 @@
+# AZURE_OPENAI_ENDPOINT=https://llm-shenhwei.openai.azure.com/openai/deployments/ysh-azureopenai-text-embedding/embeddings?api-version=2023-05-15
+# AZURE_OPENAI_APIKEY=1fa19d7e2ec543f4b8fcb7074c949dee
+# AZURE_OPENAI_DEPLOYMENT_NAME=fyp-llm
+# AZURE_OPENAI_MODEL_NAME=gpt-35-turbo-instruct
+# AZURE_OPENAI_API_VERSION=2024-06-01
+AZURE_OPENAI_ENDPOINT=https://anv2exp-azureopenai-northctrlus-twy.openai.azure.com/
+AZURE_OPENAI_APIKEY=68f05ebdf5234d198312aa2ab2070bf5
+AZURE_OPENAI_DEPLOYMENT_NAME=gpt-4o-mini-lke
+AZURE_OPENAI_MODEL_NAME=gpt-4o-mini
+AZURE_OPENAI_API_VERSION=2024-06-01
+TEXT_EMBEDDING_DEPLOYMENT_NAME=ANV2Exp-AzureOpenAI-NorthCtrlUS-TWY-textembeddingada002
+TEXT_EMBEDDING_MODEL_NAME=text-embedding-ada-002
+TEXT_EMBEDDING_APIKEY=6d344693a51340a59ecc6c2fd9e8652e
+AZURE_AI_SEARCH_ENDPOINT=https://aisearchshenhwei.search.windows.net
+AZURE_AI_SEARCH_API_KEY=vdKKvwQ0d16KKeP1DVC7fz7WOolxIxCiDvpP4aZFrwAzSeBJBL9t
+AZURE_AI_SEARCH_INDEX=index1728220894957
 
